--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "author": "LolnationCH",
   "dependencies": {
+    "diacritics": "^1.3.0",
     "discord.js": "^12.3.1",
-    "request": "^2.81.0"
+    "got": "^11.5.2"
   }
 }
