--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "LolnationCH",
   "dependencies": {
+    "cron": "^1.8.2",
     "diacritics": "^1.3.0",
     "discord.js": "^12.3.1",
     "got": "^11.5.2"
